--- a/code/part3_learned_reconstruction.ipynb
+++ b/code/part3_learned_reconstruction.ipynb
@@ -582,11 +582,20 @@
     "with tf.variable_scope('learned_iterative', reuse=tf.AUTO_REUSE):\n",
     "    with tf.name_scope('learned_iterative_reconstruction'):\n",
     "        current = tf_fbp_op(y)\n",
-    "\n",
+    "        h = y\n",
+    "        \n",
     "        for i in range(2):\n",
     "            gradient = tf_op_adj(tf_op(current) - y)\n",
+    "            fwd = tf_op(current)\n",
     "            \n",
-    "            dx = tf.concat([current, gradient], axis=-1)\n",
+    "            dh = tf.concat([h, fwd, y], axis=-1)\n",
+    "            dh = tf.contrib.layers.conv2d(dh, num_outputs=32, kernel_size=3)\n",
+    "            dh = tf.contrib.layers.conv2d(dh, num_outputs=32, kernel_size=3)\n",
+    "            h = h + dh\n",
+    "            \n",
+    "            \n",
+    "            \n",
+    "            dx = tf.concat([current, tf_op_adj(h)], axis=-1)\n",
     "            dx = tf.contrib.layers.conv2d(dx, num_outputs=32, kernel_size=3)\n",
     "            dx = tf.contrib.layers.conv2d(dx, num_outputs=32, kernel_size=3)\n",
     "            dx = tf.contrib.layers.conv2d(dx, num_outputs=1, kernel_size=3,\n",
@@ -798,7 +807,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
